Ajout de commentaire

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+<!-- Header -->
     <header>
         <nav>
             <img src="./images/logo/Reservia.svg" alt="logo">
@@ -23,7 +23,7 @@
                 <li class="sign_up"><a href="#">S'inscrire</a></li>
             </ul>
         </nav>
-
+<!-- Rechercher un hébergement -->
         <div class="search">
             <div>
                  <h1>Trouvez votre hébergements pour des vacances de rêve</h1>
