--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
         <input type="search" name="city" class="city" value="Marseille,France"/>
         <button type="submit" class="btn_search">Rechercher</button>
           </form>
+
+<!--  Filtres  -->
+
+        <div class="filters">
+            <h3>Filtres</h3>
+                <ul>
+                  <li><i class="fas fa-money-bill-wave logo_filters"></i><a href="#">Économique</a></li>                           
+                  <li><i class="fas fa-child logo_filters"></i><a href="#">Familial</a></li>
+                  <li><i class="fas fa-heart logo_filters"></i><a href="#">Romantique</a></li>
+                  <li><i class="fas fa-dog logo_filters"></i><a href="#">Animaux autorisés</a></li>
+                </ul>  
+          </div>
+
+          <div class="info">
+                <i class="fas fa-info"></i>
+                <p>Plus de 500 logements sont disponibles dans cette ville</p>
+          </div>
+          </div>
    </header>
 </body>
 
