Finalisation de la partie Search

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="./images/logo/Reservia.svg" alt="logo">
             <ul>
                 <li class="accomodations"><a href="#hebergements">Hébergements</a></li>
-                <li class="activities"><a href="#activites">Activités</a></li>
+                <li class="activities"><a href="#activities">Activités</a></li>
                 <li class="sign_up"><a href="#">S'inscrire</a></li>
             </ul>
         </nav>
@@ -37,11 +37,11 @@
 
           <form method="POST" action="#" class="form">
         <i class="fas fa-map-marker-alt"></i>
-        <input type="search" name="city" class="city" value="Marseille,France"/>
+        <input type="search" name="city" class="city" value="Marseille, France"/>
         <button type="submit" class="btn_search">Rechercher</button>
           </form>
 
-<!--  Filtres  -->
+<!--  Filters  -->   
 
         <div class="filters">
             <h3>Filtres</h3>
