Partie les plus populaires html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
           </div>
    </header>
 
+   <!-- Hébergements à Marseille-->
+
    <main>
 
         <section id="accomodations" class="main_accomodations">
@@ -161,10 +163,71 @@
                         </div>
                     </a>
                 </article>
+
+                <div class="view more">
+                    <p><a href="#">Afficher plus</a></p>
+                </div>
+
             </div>
 
+<!-- Les plus populaires--> 
 
+            <div class="most_popular">
+
+                <div class="titre_most_popular">
+                    <h2>Les plus populaires</h2>
+                    <i class="fas fa-chart-line"></i>
+                </div>
+
+                <article class="hotel_2">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin"/>
+                        <h3>Hôtel Le soleil du matin</h3>
+                        <p>Nuit à partir de <strong>128€</strong></p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="hotel_2">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
+                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                        <p>Nuit à partir de <strong>71€</strong></p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="hotel_2">
+                    <a href="#">
+                        <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc" />
+                        <h3>Hôtel Tout bleu et Blanc</h3>
+                        <p>Nuit à partir de <strong>68€</strong></p>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </a>
+                </article>
+            </div>
         </section>
+
+<!--Activités à Marseille-->
+
    </main>
 </body>
 
