Reprise du html et du css
Modification sur les class "hébergements". Modification des stars en html
Ajout de propriété CSS pour hébergement Marseille

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
             <img src="./images/logo/Reservia.svg" alt="logo"/>
             <ul>
-                <li class="accomodations"><a href="#hebergements">Hébergements</a></li>
+                <li class="hosting"><a href="#hosting">Hébergements</a></li>
                 <li class="activities"><a href="#activities">Activités</a></li>
                 <li class="sign_up"><a href="#">S'inscrire</a></li>
             </ul>
@@ -66,11 +66,10 @@
 
    <main>
 
-        <section id="accomodations" class="main_accomodations">
+        <section id="hosting" class="main_hosting">
 
-            <div class="accomodations_marseille">
+            <div class="hosting_marseille">
                 <h2>Hébergements à Marseille</h2>
-            </div>
 
             <div class="first_hotel">
                 <article class="hotel">
@@ -79,11 +78,11 @@
                         <h3>Auberge à la Cannebière</h3>
                         <p>Nuit à partir de <strong>25€</strong></p>
                         <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
                         </div>
                     </a>
                 </article>
@@ -94,11 +93,11 @@
                         <h3>Hôtel du port</h3>
                         <p>Nuit à partir de <strong>52€</strong></p>
                         <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
                         </div>
                     </a>
                 </article>
@@ -109,11 +108,11 @@
                         <h3>Hôtel Les mouettes</h3>
                         <p>Nuit à partir de <strong>76€</strong></p>
                         <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
                         </div>
                     </a>
                 </article>
@@ -127,11 +126,11 @@
                         <h3>Hôtel de la mer</h3>
                         <p>Nuit à partir de <strong>46€</strong></p>
                         <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
                         </div>
                     </a>
                 </article>
@@ -142,11 +141,11 @@
                         <h3>Auberge Le Panier</h3>
                         <p>Nuit à partir de <strong>23€</strong></p>
                         <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="empty fas fa-star"></i>
                         </div>
                     </a>
                 </article>
@@ -157,16 +156,17 @@
                         <h3>Hôtel chez Amina</h3>
                         <p>Nuit à partir de <strong>96€</strong></p>
                         <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
+                            <i class="full fas fa-star"></i>
                         </div>
                     </a>
+                </div>
                 </article>
 
-                <div class="view more">
+                <div class="view_more">
                     <p><a href="#">Afficher plus</a></p>
                 </div>
 
@@ -179,7 +179,6 @@
                 <div class="titre_most_popular">
                     <h2>Les plus populaires</h2>
                     <i class="fas fa-chart-line"></i>
-                </div>
 
                 <article class="hotel_2">
                     <a href="#">
@@ -225,7 +224,7 @@
                         </div>
                     </a>
                 </article>
-            </div>
+                </div>
         </section>
 
 <!--Activités à Marseille-->
