--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
             <div class="most_popular">
 
-                <div class="titre_most_popular">
+                <div class="title_most_popular">
                     <h2>Les plus populaires</h2>
                     <i class="fas fa-chart-line"></i>
 
