Dimension entre section et aside de hébergements à marseille

--- a/index.html
+++ b/index.html
@@ -27,25 +27,23 @@
         </nav>
     </header>
 
-
+    <main>
 <!-- Rechercher un hébergement -->
-
-        <div class="search">
-            <div>
+       <section>
+            <div class="search">
                 <h1>Trouvez votre hébergements pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
-             </div>
-        </div>
+            </div>
 
           <form method="POST" action="#" class="form">
-        <i class="fas fa-map-marker-alt"></i>
-        <input type="search" name="city" class="city" value="Marseille, France"/>
-        <button type="submit" class="btn_search">Rechercher</button>
+            <i class="fas fa-map-marker-alt"></i>
+            <input type="search" name="city" class="city" value="Marseille, France"/>
+             <button type="submit" class="btn_search">Rechercher</button>
           </form>
 
 <!--  Filters  -->   
-
-        <div class="filters">
+       
+         <div class="filters">
             <h3>Filtres</h3>
                 <ul>
                   <li><i class="fas fa-money-bill-wave logo_filters"></i><a href="#">Économique</a></li>                           
@@ -60,172 +58,174 @@
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
           </div>
 
-   
+        </section>
 
    <!-- Hébergements à Marseille-->
 
-   <main>
 
-        <section id="hosting" class="main_hosting">
+    <section id="hosting">
 
-            <div class="hosting_marseille">
-                <h2>Hébergements à Marseille</h2>
+        <section id="main_hosting">
 
-            <div class="first_hotel">
-                <article class="hotel">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" />
-                        <h3>Auberge à la Cannebière</h3>
-                        <p>Nuit à partir de <strong>25€</strong></p>
-                        <div class="stars">
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="empty fas fa-star"></i>
-                        </div>
-                    </a>
-                </article>
+        <div class="hosting_marseille">
+            <h2>Hébergements à Marseille</h2>
 
-                <article class="hotel">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
-                        <h3>Hôtel du port</h3>
-                        <p>Nuit à partir de <strong>52€</strong></p>
-                        <div class="stars">
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                        </div>
-                    </a>
-                </article>
+        <div class="first_hotel">
+            <article class="hotel">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" />
+                    <h3>Auberge à la Cannebière</h3>
+                    <p>Nuit à partir de <strong>25€</strong></p>
+                    <div class="stars">
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="empty fas fa-star"></i>
+                    </div>
+                </a>
+            </article>
 
-                <article class="hotel">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" />
-                        <h3>Hôtel Les mouettes</h3>
-                        <p>Nuit à partir de <strong>76€</strong></p>
-                        <div class="stars">
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="empty fas fa-star"></i>
-                        </div>
-                    </a>
-                </article>
+            <article class="hotel">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
+                    <h3>Hôtel du port</h3>
+                    <p>Nuit à partir de <strong>52€</strong></p>
+                    <div class="stars">
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                    </div>
+                </a>
+            </article>
+
+            <article class="hotel">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" />
+                    <h3>Hôtel Les mouettes</h3>
+                    <p>Nuit à partir de <strong>76€</strong></p>
+                    <div class="stars">
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="empty fas fa-star"></i>
+                    </div>
+                </a>
+            </article>
+        </div>
+
+        <div class="second_hotel">
+
+            <article class="hotel">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
+                    <h3>Hôtel de la mer</h3>
+                    <p>Nuit à partir de <strong>46€</strong></p>
+                    <div class="stars">
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="empty fas fa-star"></i>
+                        <i class="empty fas fa-star"></i>
+                    </div>
+                </a>
+            </article>
+
+            <article class="hotel">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" />
+                    <h3>Auberge Le Panier</h3>
+                    <p>Nuit à partir de <strong>23€</strong></p>
+                    <div class="stars">
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="empty fas fa-star"></i>
+                    </div>
+                </a>
+            </article>
+
+            <article class="hotel">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
+                    <h3>Hôtel chez Amina</h3>
+                    <p>Nuit à partir de <strong>96€</strong></p>
+                    <div class="stars">
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                        <i class="full fas fa-star"></i>
+                    </div>
+                </a>
+            </div>
+            </article>
+
+            <div class="view_more">
+                <p><a href="#">Afficher plus</a></p>
             </div>
 
-            <div class="second_hotel">
+        </div>
 
-                <article class="hotel">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
-                        <h3>Hôtel de la mer</h3>
-                        <p>Nuit à partir de <strong>46€</strong></p>
-                        <div class="stars">
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="empty fas fa-star"></i>
-                            <i class="empty fas fa-star"></i>
-                        </div>
-                    </a>
-                </article>
-
-                <article class="hotel">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" />
-                        <h3>Auberge Le Panier</h3>
-                        <p>Nuit à partir de <strong>23€</strong></p>
-                        <div class="stars">
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="empty fas fa-star"></i>
-                        </div>
-                    </a>
-                </article>
-
-                <article class="hotel">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
-                        <h3>Hôtel chez Amina</h3>
-                        <p>Nuit à partir de <strong>96€</strong></p>
-                        <div class="stars">
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                            <i class="full fas fa-star"></i>
-                        </div>
-                    </a>
-                </div>
-                </article>
-
-                <div class="view_more">
-                    <p><a href="#">Afficher plus</a></p>
-                </div>
-
-            </div>
-
+        </section>
 <!-- Les plus populaires--> 
 
-            <div class="most_popular">
+        <aside class="most_popular">
 
-                <div class="title_most_popular">
-                    <h2>Les plus populaires</h2>
-                    <i class="fas fa-chart-line"></i>
+            <div class="title_most_popular">
+                <h2>Les plus populaires</h2>
+                <i class="fas fa-chart-line"></i>
 
-                <article class="hotel_2">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin"/>
-                        <h3>Hôtel Le soleil du matin</h3>
-                        <p>Nuit à partir de <strong>128€</strong></p>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </a>
-                </article>
+            <article class="hotel_2">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin"/>
+                    <h3>Hôtel Le soleil du matin</h3>
+                    <p>Nuit à partir de <strong>128€</strong></p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </a>
+            </article>
 
-                <article class="hotel_2">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
-                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                        <p>Nuit à partir de <strong>71€</strong></p>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                    </a>
-                </article>
+            <article class="hotel_2">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
+                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                    <p>Nuit à partir de <strong>71€</strong></p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </a>
+            </article>
 
-                <article class="hotel_2">
-                    <a href="#">
-                        <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc" />
-                        <h3>Hôtel Tout bleu et Blanc</h3>
-                        <p>Nuit à partir de <strong>68€</strong></p>
-                        <div class="stars">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
-                        </div>
-                    </a>
-                </article>
-                </div>
-        </section>
+            <article class="hotel_2">
+                <a href="#">
+                    <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc" />
+                    <h3>Hôtel Tout bleu et Blanc</h3>
+                    <p>Nuit à partir de <strong>68€</strong></p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </a>
+            </article>
+        </aside>
+    </section>
 
 <!--Activités à Marseille-->
 
