--- a/index.html
+++ b/index.html
@@ -62,170 +62,189 @@
 
    <!-- Hébergements à Marseille-->
 
+   <section id="hosting">
 
-    <section id="hosting">
+    <section id="main_hosting">
 
-        <section id="main_hosting">
+    <div class="hosting_marseille">
+        <h2>Hébergements à Marseille</h2>
 
-        <div class="hosting_marseille">
-            <h2>Hébergements à Marseille</h2>
+    <div class="first_hotel">
+        <article class="hotel">
+            <a href="#">
+                <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" />
+                <h3>Auberge à la Cannebière</h3>
+                <p>Nuit à partir de <strong>25€</strong></p>
+                <div class="stars">
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="empty fas fa-star"></i>
+                </div>
+            </a>
+        </article>
 
-        <div class="first_hotel">
-            <article class="hotel">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" />
-                    <h3>Auberge à la Cannebière</h3>
-                    <p>Nuit à partir de <strong>25€</strong></p>
-                    <div class="stars">
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="empty fas fa-star"></i>
-                    </div>
-                </a>
-            </article>
+        <article class="hotel">
+            <a href="#">
+                <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
+                <h3>Hôtel du port</h3>
+                <p>Nuit à partir de <strong>52€</strong></p>
+                <div class="stars">
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                </div>
+            </a>
+        </article>
 
-            <article class="hotel">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" />
-                    <h3>Hôtel du port</h3>
-                    <p>Nuit à partir de <strong>52€</strong></p>
-                    <div class="stars">
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                    </div>
-                </a>
-            </article>
+        <article class="hotel">
+            <a href="#">
+                <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" />
+                <h3>Hôtel Les mouettes</h3>
+                <p>Nuit à partir de <strong>76€</strong></p>
+                <div class="stars">
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="empty fas fa-star"></i>
+                </div>
+            </a>
+        </article>
+    </div>
 
-            <article class="hotel">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel Les mouettes" />
-                    <h3>Hôtel Les mouettes</h3>
-                    <p>Nuit à partir de <strong>76€</strong></p>
-                    <div class="stars">
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="empty fas fa-star"></i>
-                    </div>
-                </a>
-            </article>
+    <div class="second_hotel">
+
+        <article class="hotel">
+            <a href="#">
+                <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
+                <h3>Hôtel de la mer</h3>
+                <p>Nuit à partir de <strong>46€</strong></p>
+                <div class="stars">
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="empty fas fa-star"></i>
+                    <i class="empty fas fa-star"></i>
+                </div>
+            </a>
+        </article>
+
+        <article class="hotel">
+            <a href="#">
+                <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" />
+                <h3>Auberge Le Panier</h3>
+                <p>Nuit à partir de <strong>23€</strong></p>
+                <div class="stars">
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="empty fas fa-star"></i>
+                </div>
+            </a>
+        </article>
+
+        <article class="hotel">
+            <a href="#">
+                <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
+                <h3>Hôtel chez Amina</h3>
+                <p>Nuit à partir de <strong>96€</strong></p>
+                <div class="stars">
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                    <i class="full fas fa-star"></i>
+                </div>
+            </a>
+        </div>
+        </article>
+
+        <div class="view_more">
+            <p><a href="#">Afficher plus</a></p>
         </div>
 
-        <div class="second_hotel">
+    </div>
+    </section>
 
-            <article class="hotel">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" />
-                    <h3>Hôtel de la mer</h3>
-                    <p>Nuit à partir de <strong>46€</strong></p>
-                    <div class="stars">
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="empty fas fa-star"></i>
-                        <i class="empty fas fa-star"></i>
-                    </div>
-                </a>
-            </article>
-
-            <article class="hotel">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier" />
-                    <h3>Auberge Le Panier</h3>
-                    <p>Nuit à partir de <strong>23€</strong></p>
-                    <div class="stars">
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="empty fas fa-star"></i>
-                    </div>
-                </a>
-            </article>
-
-            <article class="hotel">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" />
-                    <h3>Hôtel chez Amina</h3>
-                    <p>Nuit à partir de <strong>96€</strong></p>
-                    <div class="stars">
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                        <i class="full fas fa-star"></i>
-                    </div>
-                </a>
-            </div>
-            </article>
-
-            <div class="view_more">
-                <p><a href="#">Afficher plus</a></p>
-            </div>
-
-        </div>
-
-        </section>
 <!-- Les plus populaires--> 
 
-        <aside class="most_popular">
+    <aside class="most_popular">
 
-            <div class="title_most_popular">
-                <h2>Les plus populaires</h2>
-                <i class="fas fa-chart-line"></i>
+        <div class="title_most_popular">
+             <h2>Les plus populaires</h2>
+             <i class="fas fa-chart-line fa-2x"></i>
+        </div>
 
-            <article class="hotel_2">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin"/>
-                    <h3>Hôtel Le soleil du matin</h3>
-                    <p>Nuit à partir de <strong>128€</strong></p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </a>
-            </article>
+      <article class="hotel_2">
+       <div>
+            <a href="#">
+                <img src="./images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel le soleil du matin">
+            </a>
+        </div>
+            <a href="#">
+        <div>
+            <h3>Hôtel Le soleil du matin</h3>
+            <p>Nuit à partir de 128<strong>€</strong></p>
+        <div class="stars_popular">
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+        </div>
+        </div> 
+      </a>               
+      </article>
 
-            <article class="hotel_2">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" />
-                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                    <p>Nuit à partir de <strong>71€</strong></p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                </a>
-            </article>
+    <article class="hotel_2">
+        <div>
+            <a href="#"> 
+                <img src="./images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="au coeur de l'eau chambres d'hotes">
+            </a>
+        </div>
 
-            <article class="hotel_2">
-                <a href="#">
-                    <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc" />
-                    <h3>Hôtel Tout bleu et Blanc</h3>
-                    <p>Nuit à partir de <strong>68€</strong></p>
-                    <div class="stars">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="far fa-star"></i>
-                    </div>
-                </a>
-            </article>
-        </aside>
-    </section>
+        <a href="#">
+        <div>
+            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+            <p>Nuit à partir de 71<strong>€</strong></p>
+        <div class="stars_popular">
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="empty fas fa-star"></i>
+        </div>
+        </div>
+      </a>
+    </article>
+
+    <article class="hotel_2">
+        <div>
+            <a href="#">
+                <img src="./images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel tout bleu et blanc">
+            </a>
+        </div>
+        <a href="#">
+        <div>
+            <h3>Hôtel Tout bleu et blanc</h3>
+            <p>Nuit à partir de 68<strong>€</strong></p>
+        <div class="stars_popular">
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="full fas fa-star"></i>
+            <i class="empty fas fa-star"></i>
+        </div> 
+        </div> 
+      </a>
+    </article>
+    </aside>
+</section>
 
 <!--Activités à Marseille-->
 
